// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 65,
                "val": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 65,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 36,
                "relname": "nonesuch",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 50,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 36,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nonesuch",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 27 1`] = `[Error: syntax error at or near "from"]`;

exports[`errors.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 57,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 50,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 50,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                  "location": 75,
                },
              },
              "location": 84,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "pg_database",
                      },
                    },
                    {
                      "String": {
                        "sval": "datname",
                      },
                    },
                  ],
                  "location": 86,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 57,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 50,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 50,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "pg_database",
                      },
                    },
                    {
                      "String": {
                        "sval": "datname",
                      },
                    },
                  ],
                  "location": 75,
                },
              },
              "location": 95,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                  "location": 97,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "foobar",
                    },
                  },
                ],
                "location": 66,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 81,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 74,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 74,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 47,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "datname",
                    },
                  },
                ],
                "location": 68,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "lockingClause": [
            {
              "LockingClause": {
                "strength": "LCS_FORUPDATE",
                "waitPolicy": "LockWaitBlock",
              },
            },
          ],
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "A_Const": {
                    "isnull": true,
                    "location": 37,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "pg_database",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "GroupingSet": {
                "content": [
                  {
                    "GroupingSet": {
                      "kind": "GROUPING_SET_EMPTY",
                      "location": 54,
                    },
                  },
                ],
                "kind": "GROUPING_SET_SETS",
                "location": 39,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "lockingClause": [
            {
              "LockingClause": {
                "strength": "LCS_FORUPDATE",
                "waitPolicy": "LockWaitBlock",
              },
            },
          ],
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Const": {
                    "isnull": true,
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 43 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeleteStmt": {
          "relation": {
            "inh": true,
            "location": 34,
            "relname": "nonesuch",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 53 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 63 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "newnonesuch",
          "relation": {
            "inh": true,
            "location": 34,
            "relname": "nonesuch",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "stud_emp",
          "relation": {
            "inh": true,
            "location": 34,
            "relname": "nonesuch",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "student",
          "relation": {
            "inh": true,
            "location": 26,
            "relname": "stud_emp",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "stud_emp",
          "relation": {
            "inh": true,
            "location": 31,
            "relname": "stud_emp",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "newnonesuchatt",
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "nonesuchrel",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_TABLE",
          "renameType": "OBJECT_COLUMN",
          "subname": "nonesuchatt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "newnonesuchatt",
          "relation": {
            "inh": true,
            "location": 35,
            "relname": "emp",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_TABLE",
          "renameType": "OBJECT_COLUMN",
          "subname": "nonesuchatt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 93 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "manager",
          "relation": {
            "inh": true,
            "location": 26,
            "relname": "emp",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_TABLE",
          "renameType": "OBJECT_COLUMN",
          "subname": "salary",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 96 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "ctid",
          "relation": {
            "inh": true,
            "location": 26,
            "relname": "emp",
            "relpersistence": "p",
          },
          "relationType": "OBJECT_TABLE",
          "renameType": "OBJECT_COLUMN",
          "subname": "salary",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 98,
                    "names": [
                      {
                        "String": {
                          "sval": "int4pl",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "sfunc",
                "location": 90,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 122,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "basetype",
                "location": 111,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 141,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "stype",
                "location": 133,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 164,
                    "names": [
                      {
                        "String": {
                          "sval": "int2um",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "finalfunc",
                "location": 152,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "0",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "initcond",
                "location": 177,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "newavg2",
              },
            },
          ],
          "kind": "OBJECT_AGGREGATE",
          "oldstyle": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 120 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "int4inc",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "sfunc",
                "location": 49,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 79,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "stype",
                "location": 71,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "0",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "initcond",
                "location": 90,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "newcnt1",
              },
            },
          ],
          "kind": "OBJECT_AGGREGATE",
          "oldstyle": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 125 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 132 1`] = `[Error: syntax error at or near "314159"]`;

exports[`errors.sql > line 135 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_INDEX",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 138 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 145 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 148 1`] = `[Error: syntax error at or near "314159"]`;

exports[`errors.sql > line 151 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 47,
                      "names": [
                        {
                          "String": {
                            "sval": "nonesuch",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 47,
                        "names": [
                          {
                            "String": {
                              "sval": "nonesuch",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "newcnt",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_AGGREGATE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 154 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 48,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 48,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_AGGREGATE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 157 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 55,
                      "names": [
                        {
                          "String": {
                            "sval": "float4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 55,
                        "names": [
                          {
                            "String": {
                              "sval": "float4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "newcnt",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_AGGREGATE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 160 1`] = `[Error: syntax error at or near "("]`;

exports[`errors.sql > line 167 1`] = `[Error: syntax error at or near "314159"]`;

exports[`errors.sql > line 170 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objname": [
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_FUNCTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 173 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 180 1`] = `[Error: syntax error at or near "314159"]`;

exports[`errors.sql > line 183 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "TypeName": {
                "location": 28,
                "names": [
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "removeType": "OBJECT_TYPE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 186 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 193 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 196 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 199 1`] = `[Error: syntax error at or near ","]`;

exports[`errors.sql > line 202 1`] = `[Error: syntax error at or near "("]`;

exports[`errors.sql > line 205 1`] = `[Error: syntax error at or near ")"]`;

exports[`errors.sql > line 208 1`] = `[Error: missing argument]`;

exports[`errors.sql > line 211 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 54,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "===",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 214 1`] = `[Error: missing argument]`;

exports[`errors.sql > line 217 1`] = `[Error: syntax error at or near ","]`;

exports[`errors.sql > line 220 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 36,
                      "names": [
                        {
                          "String": {
                            "sval": "nonesuch",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 46,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 223 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 36,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 42,
                      "names": [
                        {
                          "String": {
                            "sval": "nonesuch",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 226 1`] = `[Error: syntax error at or near ")"]`;

exports[`errors.sql > line 229 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 236 1`] = `[Error: syntax error at or near "314159"]`;

exports[`errors.sql > line 239 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "noplace",
                    },
                  },
                  {
                    "String": {
                      "sval": "nonesuch",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_RULE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 242 1`] = `[Error: syntax error at or near "tuple"]`;

exports[`errors.sql > line 245 1`] = `[Error: syntax error at or near "instance"]`;

exports[`errors.sql > line 246 1`] = `[Error: syntax error at or near "rewrite"]`;

exports[`errors.sql > line 247 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 67,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 67,
                      },
                    },
                    "location": 68,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 69,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 253 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 9,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "int8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 16,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 17,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 255 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 9,
                      },
                    },
                    "location": 10,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {},
                            "location": 11,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "int8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 257 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 9,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "int2",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 16,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 17,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 259 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 9,
                      },
                    },
                    "location": 10,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {},
                            "location": 11,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "int2",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 261 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 9,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 19,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 20,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 263 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 9,
                      },
                    },
                    "location": 10,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {},
                            "location": 11,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 265 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 9,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "float8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 18,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 19,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 267 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 9,
                      },
                    },
                    "location": 10,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {},
                            "location": 11,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "float8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 269 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 9,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "float4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 18,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 19,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 271 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 9,
                      },
                    },
                    "location": 10,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {},
                            "location": 11,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "float4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`errors.sql > line 280 1`] = `[Error: syntax error at or near "foo"]`;

exports[`errors.sql > line 282 1`] = `[Error: syntax error at end of input]`;

exports[`errors.sql > line 284 1`] = `[Error: syntax error at or near "\\"]`;

exports[`errors.sql > line 289 1`] = `[Error: syntax error at or near "123"]`;

exports[`errors.sql > line 292 1`] = `[Error: syntax error at or near "123"]`;

exports[`errors.sql > line 296 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 302 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 306 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 310 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 313 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 328 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 336 1`] = `[Error: syntax error at or near "NUL"]`;

exports[`errors.sql > line 347 1`] = `[Error: syntax error at or near "NUL"]`;
